# Symbolic-Pursuit

./: .Rhistory  .gitignore  .isort.cfg  .pre-commit-config.yaml  1. Building a Symbolic Regressor.ipynb  2. Symbolic Pursuit vs LIME.ipynb  3. Symbolic Pursuit vs LIME.ipynb  3. Synthetic experiments with Symbolic Pursuit.ipynb  README.md  build_interpreter.py  requirement.txt.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test.yml
.ipynb_checkpoints/: 1. Building a Symbolic Regressor-checkpoint.ipynb  2. Building a Symbolic Classifier -checkpoint.ipynb  4. Synthetic experiments with Symbolic Pursuit-checkpoint.ipynb
datasets/: data_loader_UCI.py  datasets.py
experiments/: performance_blackbox.py  synthetic_feature_importance.py  synthetic_feature_importance.txt  train_model.py
experiments/models/: wine-quality-red_MLP_2020-10-29 18:03:06.pickle
pysymbolic/algorithms/: faithful_modeling.py
src/symbolic_pursuit/: logger.py  models.py
symbolic_pursuit/: models.py
symbolic_pursuit/pysymbolic/benchmarks/: synthetic_datasets.py  univariate_functions.py
symbolic_pursuit/pysymbolic/models/: special_functions.py
tests/: test_sanity.py
